2013-07-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensured compatibility with TYPO3 CMS 6.1, resolves #50311
	* Released version 1.5.0

2013-01-24 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.4.0

2012-01-18  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensured compatibility with TYPO3 CMS 6.0, resolves #44618
	* Switched RSS import example from tt_news to news, references #44618


2012-06-15  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.3.0
	* Updated the manual and the dependencies, resolves #38071

2012-05-29  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated XML import example to match new typo3.org RSS feed, resolves #37573

2011-03-08  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.2.0

2011-02-27  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added example for importing data in XML format, resolves #12043

2010-03-26  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.1.3

2010-03-23  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated screenshot to reflect UI changes

2010-01-19  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added example for usage of excludedOperations property

2009-11-23  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated the manual to fit latest version of external_import
	* Released to TER as version 1.1.2

2009-06-16  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added example for usage of fixed value maps
	* Released to TER as version 1.1.0

2009-06-02  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added example for usage of fixed values

2009-01-16  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* First public release