@@ -1,3 +1,7 @@
+2014-06-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Made all user functions and hooks into singletons, resolves #58400
+
 2013-07-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Ensured compatibility with TYPO3 CMS 6.1, resolves #50311
